fixed font weight and icons

--- a/src/assets/scss/now-ui-kit.scss
+++ b/src/assets/scss/now-ui-kit.scss
@@ -65,3 +65,6 @@
 @import "now-ui-kit/element-ui-plugins/input";
 @import "now-ui-kit/element-ui-plugins/tooltip";
 @import "now-ui-kit/element-ui-plugins/popover";
+
+// my custom styles
+@import "now-ui-kit/z_my";
