--- a/src/assets/scss/now-ui-kit/_sections.scss
+++ b/src/assets/scss/now-ui-kit/_sections.scss
@@ -34,7 +34,12 @@
 
   &.page-header-small{
       min-height: 60vh;
-      max-height: 240px;
+      max-height: 440px;
+  }
+
+  &.page-header-xsmall{
+    min-height: 40vh;
+    max-height: 440px;
   }
 
   &:before{
